tests/analyzer/errors/indexing.ray
fn main() {
    var foo = true
    foo[0]

    var array = [1.5, 6.8]
    array[true]
    array[1.0]

    var twoDim = [[1, 2], [3, 4]]
    print twoDim[0][1][2]

    let name = "Tom"
    name[1] = "i"
}
